--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="container">
             
-            <div class="title">Calculadora - IMC</div>
+            <div class="title">IMC Calculadora</div>
             
             <div class="input">
                 <label>Nome:</label>
